# job/job.go
@@ -18,23 +18,27 @@ type LockedResources = map[string]JobUUID   // LockedResources is a map of resou
 
 // JobEvent describes every event that can happen to a job (in job history)
 const (
-	JobEventCreate  = "CREATE"  // event type for the creation of a job (first event)
-	JobEventEnqueue = "ENQUEUE" // event type for the queuing of a job (ready to start) (only occurs after a create event)
-	JobEventStart   = "START"   // event type for the start of a job (only occurs after a queue event)
-	JobEventSuccess = "SUCCESS" // event type for the success of a job (final state) (only occurs after a start or retry event)
-	JobEventCancel  = "CANCEL"  // event type for the cancellation of a job (final state) (only occurs after a start or retry event)
-	// events to handle errors
+	JobEventCreate    = "CREATE"    // event type for the creation of a job (first event)
+	JobEventDelay     = "DELAY"     // event type for the delay of a job (not yet visible in the queue)
+	JobEventPending   = "PENDING"   // event type for the pending state of a job (not yet ready to start)
+	JobEventEnqueue   = "ENQUEUE"   // event type for the queuing of a job (ready to start) (only occurs after a create event)
+	JobEventStart     = "START"     // event type for the start of a job (only occurs after a queue event)
+	JobEventSuccess   = "SUCCESS"   // event type for the success of a job (final state) (only occurs after a start or retry event)
+	JobEventCancel    = "CANCEL"    // event type for the cancellation of a job (final state) (only occurs after a start or retry event)
 	JobEventFail      = "FAIL"      // failure (might be retried, depending on the retry policy) (only occurs after a start or retry event)
 	JobEventRetry     = "RETRY"     // retry of a failed job (only occurs after a fail event)
+	JobEventHide      = "HIDE"      // event type for the hiding of a job (not visible in the queue)
 	JobEventTerminate = "TERMINATE" // definitive failure, when no more retries are possible (final state) (only occurs after a fail event)
 	JobEventDelete    = "DELETE"    // event type for the deletion of a job
 )
 
 // JobState describes the state of a job, it depends on the job history
-type JobState int
+type JobState int8
 
 const (
 	JobNoState   JobState = iota // NoState is a special state when no state is found
+	JobCreated                   // JobCreated is the state of a job when it is created
+	JobDelayed                   // JobDelayed is the state of a job when it is delayed (not yet visible in the queue)
 	JobPending                   // JobPending is the initial state of a job
 	JobQueued                    // JobQueued is the state of a job when it is ready to start
 	JobRunning                   // JobRunning is the state of a job when it is running
@@ -42,6 +46,7 @@ const (
 	JobFailed                    // JobFailed is the state of a job when it definitively failed (no more possible retries)
 	JobCanceled                  // JobCanceled is the state of a job when it is canceled
 	JobDeleted                   // JobDeleted is the state of a job when it is deleted
+	JobHidden                    // JobHidden is the state of a job when it is hidden (not visible in the queue)
 )
 
 type JobHistoryEvent struct {
@@ -54,7 +59,7 @@ type JobHistory []JobHistoryEvent
 type Job struct {
 	JobUUID           JobUUID       `json:"id"`                // The unique identifier of a job (required)
 	Topic             string        `json:"topic"`             // The topic name for which the job has been created (optional)
-	Priority          int           `json:"priority"`          // The priority of the job (optional)
+	Priority          int8          `json:"priority"`          // The priority of the job (optional)
 	JobProperties     JobProperties `json:"properties"`        // The job properties (required)
 	History           JobHistory    `json:"history"`           // The list of events of the job
 	LockResources     ResourceList  `json:"lockResources"`     // The list of resources to lock (optional)
@@ -66,25 +71,26 @@ type Job struct {
 	DebugMode         bool          `json:"debugMode"`         // The debug flag of the job (optional)
 	VisibilityTimeout uint          `json:"visibilityTimeout"` // Duration (in seconds) to keep the job hidden from the queue after it is fetched
 	StartAfter        int64         `json:"startAfter"`        // Timestamp (in milliseconds) to start the job after
-	state             JobState      // The state of the job
+	state             JobState      // The current state of the job
+	previousState     JobState      // The previous state of the job
 }
 
 type JobMap = map[JobUUID]*Job
 
 // JobRequest is the request to create a job, it is used to create a job from a http request
 type JobRequest struct {
-	Topic         string        `json:"topic"`                          // Topic is the topic name for which the job has been created (optional)
-	Priority      int           `json:"priority"`                       // Priority is the priority of the job (optional)
-	JobProperties JobProperties `json:"properties" validate:"required"` // Properties is the job properties (required)
-	LockResources ResourceList  `json:"lockResources"`                  // LockResources is the list of resources to lock (optional)
-	UserAgent     string        `json:"userAgent"`                      // UserAgent is the user agent (or program name) that make the request (optional)
-	Requester     string        `json:"requester"`                      // Requester is the identifier of the job requester (optional)
-	Name          string        `json:"name"`                           // Name is the name of the job (optional)
-	SessionId     string        `json:"sessionId"`                      // SessionId is the session identifier of the requester (optional)
-	TraceId       string        `json:"traceId"`                        // TraceId is the trace identifier of the job (optional)
-	DebugMode     bool          `json:"debugMode"`                      // DebugMode is the debug flag of the job (optional)
-	StartAfter    int64         `json:"startAfter"`                     // Timestamp (in milliseconds) to start the job after
-	Delay         int64         `json:"delay"`                          // Delay (in seconds) to wait before starting the job
+	Topic         string        `json:"topic" example:"default"`                                  // Topic is the topic name for which the job has been created (optional)
+	Priority      int8          `json:"priority" example:0`                                       // Priority is the priority of the job (optional)
+	JobProperties JobProperties `json:"properties" validate:"required"`                           // Properties is the job properties (required)
+	LockResources ResourceList  `json:"lockResources"`                                            // LockResources is the list of resources to lock (optional)
+	UserAgent     string        `json:"userAgent" example:"myJobProducerName"`                    // UserAgent is the user agent (or program name) that make the request (optional)
+	Requester     string        `json:"requester"`                                                // Requester is the identifier of the job requester (optional)
+	Name          string        `json:"name" example:"myJobName01"`                               // Name is the name of the job (optional)
+	SessionId     string        `json:"sessionId" example:"6e70464d-85cf-431d-a9c9-a1f9c0ac82dc"` // SessionId is the session identifier of the requester (optional)
+	TraceId       string        `json:"traceId" example:"e7b46b16-c971-464e-8a47-c791be0ce2ed"`   // TraceId is the trace identifier of the job (optional)
+	DebugMode     bool          `json:"debugMode" example:false`                                  // DebugMode is the debug flag of the job (optional)
+	StartAfter    int64         `json:"startAfter"`                                               // Timestamp (in milliseconds) to start the job after
+	Delay         int64         `json:"delay" example:0`                                          // Delay (in seconds) to wait before starting the job
 }
 
 func (j Job) ToJSON() (string, error) {
@@ -95,12 +101,11 @@ func (j Job) ToJSON() (string, error) {
 	return string(jobJSON), nil
 }
 
-// Get job creation date
-func (j *Job) GetCreationDate() int64 {
-	// the creation date is the first event in the history
+// Get job creation timestamp in milliseconds
+func (j *Job) GetCreationTimestamp() int64 {
+	// the creation date time is the first event in the history
 	if len(j.History) == 0 {
-		// no creation date found
-		panic("no creation date found")
+		panic("no creation timestamp found")
 	}
 
 	return j.History[0].Timestamp
@@ -121,32 +126,28 @@ func (j *Job) GetState() JobState {
 }
 
 func (j *Job) GetPreviousState() JobState {
-	if len(j.History) > 1 {
-		// the state is the last event in the history
-		return j.GetStateFromEvent(j.History[len(j.History)-2].EventType)
-	}
-	return JobNoState
+	return j.previousState
 }
 
 func (j *Job) SetStateFromHistory() {
-	state := j.ComputeStateFromHistory()
-	if state == JobNoState {
-		panic("no state found")
+	j.state = JobNoState
+	statesHistory := j.GetHistoryStates()
+	if len(statesHistory) > 0 {
+		j.state = statesHistory[len(statesHistory)-1]
 	}
-	j.state = state
-}
-
-func (j *Job) ComputeStateFromHistory() JobState {
-	if len(j.History) > 0 {
-		// the state is the last event in the history
-		return j.GetStateFromEvent(j.History[len(j.History)-1].EventType)
+	j.previousState = JobNoState
+	if len(statesHistory) > 1 {
+		j.previousState = statesHistory[len(statesHistory)-2]
 	}
-	return JobNoState
 }
 
 func (j *Job) GetStateFromEvent(eventType string) JobState {
 	switch eventType {
 	case JobEventCreate:
+		return JobCreated
+	case JobEventDelay:
+		return JobDelayed
+	case JobEventPending:
 		return JobPending
 	case JobEventEnqueue:
 		return JobQueued
@@ -154,6 +155,8 @@ func (j *Job) GetStateFromEvent(eventType string) JobState {
 		return JobRunning
 	case JobEventSuccess:
 		return JobSucceeded
+	case JobEventHide:
+		return JobHidden
 	case JobEventCancel:
 		return JobCanceled
 	case JobEventTerminate:
@@ -201,11 +204,14 @@ func (j *Job) Clone() *Job {
 		VisibilityTimeout: j.VisibilityTimeout,
 		StartAfter:        j.StartAfter,
 		state:             j.state,
+		previousState:     j.previousState,
 	}
 }
 
 func (j *Job) Init(id JobUUID, creationDate int64) {
 	j.JobUUID = id
+	j.state = JobNoState
+	j.previousState = JobNoState
 	j.History = make(JobHistory, 0)
 	j.AddHistoryEvent(JobEventCreate, creationDate)
 }
@@ -215,14 +221,15 @@ func (j *Job) AddHistoryEvent(eventType string, timestamp int64) {
 		EventType: eventType,
 		Timestamp: timestamp,
 	})
-	j.state = j.ComputeStateFromHistory()
+	j.previousState = j.state
+	j.state = j.GetStateFromEvent(eventType)
 }
 
 func (j *Job) GetHistoryStates() []JobState {
 	// Get the list of states from the history
-	states := make([]JobState, 0)
-	for _, event := range j.History {
-		states = append(states, j.GetStateFromEvent(event.EventType))
+	states := make([]JobState, len(j.History))
+	for i, event := range j.History {
+		states[i] = j.GetStateFromEvent(event.EventType)
 	}
 	return states
 }
@@ -236,8 +243,16 @@ func (j *Job) GetCountLockResources() uint {
 	}
 }
 
+func (j *Job) GetDurationMsSinceLastAndFirstEvent() int64 {
+	// Get the time difference between the last event and the second event in milliseconds
+	if len(j.History) < 2 {
+		return 0
+	}
+	return j.History[len(j.History)-1].Timestamp - j.History[0].Timestamp
+}
+
 func NewJob(payload []byte) (*Job, error) {
-	// Create a new job from a backend (redis) payload
+	// Create a new job from a backend (ex: redis) payload
 	j := &Job{}
 	err := json.Unmarshal(payload, j)
 	if err != nil {
@@ -248,13 +263,13 @@ func NewJob(payload []byte) (*Job, error) {
 			Err:      err,
 		}
 	}
-	j.ComputeStateFromHistory()
+	j.SetStateFromHistory()
 	return j, nil
 }
 
 func NewJobFromRequest(payload []byte) (*Job, error) {
 	// Create a new job from a http request
-	// A job created from a request does not have a JobUUID and History
+	// A job created from a request does not have a JobUUID nor History
 	req := &JobRequest{}
 	err := json.Unmarshal(payload, req)
 	if err != nil {
@@ -288,9 +303,10 @@ func NewJobFromRequest(payload []byte) (*Job, error) {
 		TraceId:       req.TraceId,
 		DebugMode:     req.DebugMode,
 		StartAfter:    startAfter,
+		state:         JobNoState,
+		previousState: JobNoState,
 	}
 
 	// note that the JobUUID and History will be set later
-
 	return j, nil
 }
